Fix z-index of content and clean up test code

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,9 +34,8 @@ h2 {
   font-size: 1.5rem;
   font-weight: 700;
   padding: 0;
-  margin-top: var(--gap-small);
+  margin: var(--gap-small);
   margin-bottom: var(--gap-large);
-  margin-left: var(--gap-small);
 }
 
 .menu li {
@@ -75,7 +74,6 @@ button:hover {
 }
 
 .content {
-  z-index: -1;
   background-color: var(--color-light);
   padding: var(--gap-small);
   box-sizing: border-box;
